# example-devcontainer-vcpkg-crosscompile

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: httpdemo.yml
custom-triplets/: amd64-mingw-toolchain.cmake  amd64-mingw.cmake  arm64-linux-musl-toolchain.cmake  arm64-linux-musl.cmake
